[SERVDEV-49] - removed body paddings used for development issues - changed html to always have scrollbar visible

--- a/package-res/module-scripts/css/marketplace.css
+++ b/package-res/module-scripts/css/marketplace.css
@@ -15,8 +15,8 @@
    General Styles
    ========================================================================== */
 
-body {
-  padding: 50px 200px !important; /*for styling purposes. remove in the end*/
+html {
+  overflow-y: scroll;
 }
 
 .clear {
